<resources>
    <string name="app_name">SMS Bulker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_account">Account</string>
    <string name="menu_subscription">Subscription</string>
    <string name="menu_usage">Usage Analytics</string>
    <string name="menu_templates">Templates</string>
    <string name="menu_analytics">Analytics</string>
    <string name="other">Other</string>
    <string name="menu_logout">Logout</string>
    
    <!-- Additional strings for navigation -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_reports">Reports</string>
    <string name="menu_settings">Settings</string>

    <!-- Account Screen -->
    <string name="profile">Profile</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="api_key">API Key</string>
    <string name="regenerate_api_key">Regenerate API Key</string>
    <string name="credits">Credits</string>
    <string name="available_credits">%1$d credits available</string>
    <string name="used_credits">%1$d credits used</string>
    <string name="low_balance_alert">Low balance alert at %1$d credits</string>
    <string name="auto_refill">Auto-refill when balance is low</string>
    <string name="subscription">Subscription</string>
    <string name="monthly_credits">%1$d credits per month</string>
    <string name="price_per_month">$%1$.2f/month</string>
    <string name="auto_renew">Auto-renew subscription</string>
    <string name="change_plan">Change Plan</string>
    <string name="settings">Settings</string>
    <string name="notification_settings">Notification Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="feature_check">Feature included</string>
    
    <!-- Auth -->
    <string name="login">Login</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_templates">Templates</string>
    <string name="title_settings">Settings</string>
    <string name="title_send_message">Send Message</string>
    <string name="send_message">Send Message</string>
    <string name="import_csv">Import CSV</string>
    <string name="title_csv_editor">CSV Editor</string>
    
    <!-- Payment Screen -->
    <string name="purchase_credits">Purchase Credits</string>
    <string name="credit_packages">Credit Packages</string>
    <string name="custom_credits">Custom Credits</string>
    <string name="enter_credit_amount">Enter credit amount</string>
    <string name="calculate">Calculate</string>
    <string name="clear_selection">Clear Selection</string>
    <string name="proceed_to_payment">Proceed to Payment</string>
    <string name="credits_format">%1$d Credits</string>
    <string name="bonus_credits_format">+%1$d Bonus</string>
    <string name="price_format">$%1$.2f</string>
    <string name="discount_format">%1$d%% OFF</string>
    <string name="total_credits_format">Total: %1$d Credits</string>
    <string name="price_per_credit_format">$%1$.3f per credit</string>
    <string name="calculation_result">Calculation Result</string>
    <string name="total_amount">Total Amount</string>
    <string name="connecting_to_payment_portal">Connecting to Payment Portal</string>
    <string name="payment_portal_message">Please wait while we connect you to the payment portal. This may take a few moments.</string>
    <string name="payment_processing">Processing payment...</string>
    <string name="payment_success">Payment successful!</string>
    <string name="payment_failed">Payment failed. Please try again.</string>
    <string name="payment_cancelled">Payment cancelled</string>
    <string name="invalid_amount">Please enter a valid amount</string>
    <string name="minimum_credits">Minimum 10 credits required</string>
    
    <!-- Contacts Loading Dialogs -->
    <string name="loading_contacts">Loading Contacts</string>
    <string name="loading_contacts_message">Please wait while we load your contacts. This may take a few moments.</string>
    <string name="deleting_contacts">Deleting Contacts</string>
    <string name="deleting_contacts_message">Please wait while we delete the selected contacts. This may take a few moments.</string>
    <string name="adding_recipients">Adding Recipients</string>
    <string name="adding_recipients_message">Please wait while we add the selected contacts to the recipient list. This may take a few moments.</string>
    
    <!-- Message Sending Dialogs -->
    <string name="sending_messages">Sending Messages</string>
    <string name="sending_messages_message">Please wait while we send your messages. This may take a few moments.</string>
    <string name="validating_messages">Validating Messages</string>
    <string name="validating_messages_message">Please wait while we validate your message content and recipients. This may take a few moments.</string>
</resources>